REG-7020 en liten fix på spacing i gruppeliste

--- a/dolly-web-core/src/main/web_src/src/components/ui/dollyTable/table/Table.less
+++ b/dolly-web-core/src/main/web_src/src/components/ui/dollyTable/table/Table.less
@@ -131,6 +131,7 @@
 			.dot-column {
 				display: flex;
 				align-items: center;
+				margin-right: 20px;
 
 				&:last-child {
 					justify-content: flex-end;
